Replaced the google chart example with something that reflects better progressive enhancement. Example plugin draws the values from the dom to populate the google dataTable

--- a/root/source/modules/chart/html/index.html
+++ b/root/source/modules/chart/html/index.html
@@ -1,3 +1,83 @@
-<div class="chart">
-    <div class="chart-output"></div>
+<div class="chart" data-chart-type="PieChart">
+    <table class="chart-data">
+        <thead>
+            <tr>
+                <th data-type="string">Asset Type</th>
+                <th data-type="number">Count</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>PDF</td>
+                <td>45</td>
+            </tr>
+            <tr>
+                <td>Word</td>
+                <td>20</td>
+            </tr>
+            <tr>
+                <td>Excel</td>
+                <td>120</td>
+            </tr>
+            <tr>
+                <td>Image</td>
+                <td>230</td>
+            </tr>
+            <tr>
+                <td>Text</td>
+                <td>4</td>
+            </tr>
+        </tbody>
+    </table>
+    <figure class="chart-figure">
+        <div role="img" class="chart-output" title="The number of file assets in the Matrix system grouped by type"></div>
+        <figcaption class="chart-caption">
+            The number of file assets in the Matrix system grouped by type
+        </figcaption>
+    </figure>
+</div><!-- /.chart -->
+
+<div class="chart" data-chart-type="ColumnChart">
+    <table class="chart-data">
+        <thead>
+            <tr>
+                <th data-type="string">Year</th>
+                <th data-type="number">Sales</th>
+                <th data-type="number">Expenses</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2008</td>
+                <td>455</td>
+                <td>342</td>
+            </tr>
+            <tr>
+                <td>2009</td>
+                <td>778</td>
+                <td>1234</td>
+            </tr>
+            <tr>
+                <td>2010</td>
+                <td>334</td>
+                <td>778</td>
+            </tr>
+            <tr>
+                <td>2011</td>
+                <td>226</td>
+                <td>342</td>
+            </tr>
+            <tr>
+                <td>2012</td>
+                <td>664</td>
+                <td>558</td>
+            </tr>
+        </tbody>
+    </table>
+    <figure class="chart-figure">
+        <div role="img" class="chart-output" title="Sales figures for 2008-2012"></div>
+        <figcaption class="chart-caption">
+            Sales figures for 2008-2012
+        </figcaption>
+    </figure>
 </div><!-- /.chart -->
