Removed console statement. Added JSON parser to data-options attributes so the options for the chart can be defined in the dom as JSON

--- a/root/source/modules/chart/html/index.html
+++ b/root/source/modules/chart/html/index.html
@@ -1,4 +1,6 @@
-<div class="chart" data-chart-type="PieChart">
+<div class="chart" data-chart-type="PieChart" data-options='{
+    "is3D": true
+}'>
     <table class="chart-data">
         <thead>
             <tr>
