--- a/root/source/modules/chart/html/index.html
+++ b/root/source/modules/chart/html/index.html
@@ -83,3 +83,118 @@
         </figcaption>
     </figure>
 </div><!-- /.chart -->
+
+<div class="chart" data-chart-type="LineChart">
+    <table class="chart-data">
+        <thead>
+            <tr>
+                <th data-type="string">Year</th>
+                <th data-type="number">Sales</th>
+                <th data-type="number">Expenses</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2008</td>
+                <td>455</td>
+                <td>342</td>
+            </tr>
+            <tr>
+                <td>2009</td>
+                <td>778</td>
+                <td>1234</td>
+            </tr>
+            <tr>
+                <td>2010</td>
+                <td>334</td>
+                <td>778</td>
+            </tr>
+            <tr>
+                <td>2011</td>
+                <td>226</td>
+                <td>342</td>
+            </tr>
+            <tr>
+                <td>2012</td>
+                <td>664</td>
+                <td>558</td>
+            </tr>
+        </tbody>
+    </table>
+    <figure class="chart-figure">
+        <div role="img" class="chart-output" title="Sales figures for 2008-2012"></div>
+        <figcaption class="chart-caption">
+            Sales figures for 2008-2012
+        </figcaption>
+    </figure>
+</div><!-- /.chart -->
+
+<div class="chart" data-chart-type="Timeline">
+    <table class="chart-data">
+        <thead>
+            <tr>
+                <th data-type="string">Task</th>
+                <th data-type="date">Start</th>
+                <th data-type="date">End</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Design</td>
+                <td data-value="29 Mar 2013">29th March 2013</td>
+                <td data-value="31 Mar 2013">31st March 2013</td>
+            </tr>
+            <tr>
+                <td>Cutup</td>
+                <td data-value="1 Apr 2013">1st April 2013</td>
+                <td data-value="5 Apr 2013">5th April 2013</td>
+            </tr>
+            <tr>
+                <td>Quality Assurance</td>
+                <td data-value="6 Apr 2013">6th April 2013</td>
+                <td data-value="8 Apr 2013">8th April 2013</td>
+            </tr>
+        </tbody>
+    </table>
+    <figure class="chart-figure">
+        <div role="img" class="chart-output" title="Project Timeline"></div>
+        <figcaption class="chart-caption">
+            Project Timeline
+        </figcaption>
+    </figure>
+</div><!-- /.chart -->
+
+<div class="chart" data-chart-type="Gauge" data-options='{
+    "redFrom": 90, "redTo": 100,
+    "yellowFrom":75, "yellowTo": 90,
+    "minorTicks": 5
+}'>
+    <table class="chart-data">
+        <thead>
+            <tr>
+                <th data-type="string">Label</th>
+                <th data-type="number">Value</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Memory</td>
+                <td>80</td>
+            </tr>
+            <tr>
+                <td>CPU</td>
+                <td>55</td>
+            </tr>
+            <tr>
+                <td>Network</td>
+                <td>58</td>
+            </tr>
+        </tbody>
+    </table>
+    <figure class="chart-figure">
+        <div role="img" class="chart-output" title="PC Gauge"></div>
+        <figcaption class="chart-caption">
+            PC Gauge
+        </figcaption>
+    </figure>
+</div><!-- /.chart -->
