Added more documentation. Removed width restriction in CSS, not necessary. New outputter function controls the resulting HTML scaffolding around the .chart-output element, possible to customise it if necessary.

--- a/root/source/modules/chart/html/index.html
+++ b/root/source/modules/chart/html/index.html
@@ -1,6 +1,6 @@
 <div class="chart" data-chart-type="PieChart" data-options='{
     "is3D": true
-}'>
+}' data-title="The number of file assets in the Matrix system grouped by type">
     <table class="chart-data">
         <thead>
             <tr>
@@ -31,15 +31,9 @@
             </tr>
         </tbody>
     </table>
-    <figure class="chart-figure">
-        <div role="img" class="chart-output" title="The number of file assets in the Matrix system grouped by type"></div>
-        <figcaption class="chart-caption">
-            The number of file assets in the Matrix system grouped by type
-        </figcaption>
-    </figure>
 </div><!-- /.chart -->
 
-<div class="chart" data-chart-type="ColumnChart">
+<div class="chart" data-chart-type="ColumnChart" data-title="Sales figures for 2008-2012">
     <table class="chart-data">
         <thead>
             <tr>
@@ -76,15 +70,9 @@
             </tr>
         </tbody>
     </table>
-    <figure class="chart-figure">
-        <div role="img" class="chart-output" title="Sales figures for 2008-2012"></div>
-        <figcaption class="chart-caption">
-            Sales figures for 2008-2012
-        </figcaption>
-    </figure>
 </div><!-- /.chart -->
 
-<div class="chart" data-chart-type="LineChart">
+<div class="chart" data-chart-type="LineChart" data-title="Sales figures for 2008-2012">
     <table class="chart-data">
         <thead>
             <tr>
@@ -121,15 +109,9 @@
             </tr>
         </tbody>
     </table>
-    <figure class="chart-figure">
-        <div role="img" class="chart-output" title="Sales figures for 2008-2012"></div>
-        <figcaption class="chart-caption">
-            Sales figures for 2008-2012
-        </figcaption>
-    </figure>
 </div><!-- /.chart -->
 
-<div class="chart" data-chart-type="Timeline">
+<div class="chart" data-chart-type="Timeline" data-title="Project Timeline">
     <table class="chart-data">
         <thead>
             <tr>
@@ -156,23 +138,17 @@
             </tr>
         </tbody>
     </table>
-    <figure class="chart-figure">
-        <div role="img" class="chart-output" title="Project Timeline"></div>
-        <figcaption class="chart-caption">
-            Project Timeline
-        </figcaption>
-    </figure>
 </div><!-- /.chart -->
 
 <div class="chart" data-chart-type="Gauge" data-options='{
     "redFrom": 90, "redTo": 100,
     "yellowFrom":75, "yellowTo": 90,
     "minorTicks": 5
-}'>
+}' data-title="Server Load">
     <table class="chart-data">
         <thead>
             <tr>
-                <th data-type="string">Label</th>
+                <th data-type="string">System Component</th>
                 <th data-type="number">Value</th>
             </tr>
         </thead>
@@ -191,10 +167,4 @@
             </tr>
         </tbody>
     </table>
-    <figure class="chart-figure">
-        <div role="img" class="chart-output" title="PC Gauge"></div>
-        <figcaption class="chart-caption">
-            PC Gauge
-        </figcaption>
-    </figure>
 </div><!-- /.chart -->
