Removed incorrectly applied role='menu' and replaced with role='navigation'

--- a/root/source/modules/nav_dropdown/html/mega.html
+++ b/root/source/modules/nav_dropdown/html/mega.html
@@ -1,6 +1,6 @@
 <div class="nav-dropdown nav-dropdown-horizontal nav-dropdown-mega clearfix">
-    <ul class="nav-dropdown-list" role="menu">
-        <li class="nav-dropdown-item" role="menuitem">
+    <ul class="nav-dropdown-list" role="navigation">
+        <li class="nav-dropdown-item">
             <a href="#" class="nav-dropdown-item-link">Link #1</a>
             <div class="nav-dropdown-sub">
                 <div class="nav-dropdown-sub-mega-row">
@@ -10,7 +10,7 @@
                         </p>
                     </div>
                     <div class="nav-dropdown-sub-mega-column">
-                        <ul class="nav-dropdown-sub-mega-column-content" role="menu">
+                        <ul class="nav-dropdown-sub-mega-column-content">
                             <li><a href="#">Column link #1</a></li>
                             <li><a href="#">Column link #2</a></li>
                             <li><a href="#">Column link #3</a></li>
@@ -19,7 +19,7 @@
                         </ul>
                     </div>
                     <div class="nav-dropdown-sub-mega-column">
-                        <ul class="nav-dropdown-sub-mega-column-content" role="menu">
+                        <ul class="nav-dropdown-sub-mega-column-content">
                             <li><a href="#">Column link #1</a></li>
                             <li><a href="#">Column link #2</a></li>
                             <li><a href="#">Column link #3</a></li>
@@ -38,7 +38,7 @@
                 </p>
             </div>
         </li>
-        <li class="nav-dropdown-item nav-dropdown-item-current" role="menuitem">
+        <li class="nav-dropdown-item nav-dropdown-item-current">
             <a href="#" class="nav-dropdown-item-link">Link #2</a>
             <div class="nav-dropdown-sub">
                 <div class="nav-dropdown-sub-mega-row">
@@ -48,7 +48,7 @@
                         </p>
                     </div>
                     <div class="nav-dropdown-sub-mega-column">
-                        <ul class="nav-dropdown-sub-mega-column-content" role="menu">
+                        <ul class="nav-dropdown-sub-mega-column-content">
                             <li><a href="#">Column link #1</a></li>
                             <li><a href="#">Column link #2</a></li>
                             <li><a href="#">Column link #3</a></li>
@@ -57,14 +57,14 @@
                         </ul>
                     </div>
                     <div class="nav-dropdown-sub-mega-column">
-                        <div class="nav-dropdown-sub-mega-column-content" role="menu">
+                        <div class="nav-dropdown-sub-mega-column-content">
 
                             <h2>Link #2</h2>
                             <p>Lorem ipsum Sed deserunt et esse velit Duis pariatur et sint in magna tempor occaecat Ut sint nostrud ad id dolor culpa elit culpa proident culpa ea in consequat.</p>
                         </div>
                     </div>
                     <div class="nav-dropdown-sub-mega-column">
-                        <ul class="nav-dropdown-sub-mega-column-content" role="menu">
+                        <ul class="nav-dropdown-sub-mega-column-content">
                             <li><a href="#">Column link #1</a></li>
                             <li><a href="#">Column link #2</a></li>
                             <li><a href="#">Column link #3</a></li>
@@ -75,12 +75,12 @@
                 </div>
             </div>
         </li>
-        <li class="nav-dropdown-item" role="menuitem"><a href="#" class="nav-dropdown-item-link">Link #3</a></li>
-        <li class="nav-dropdown-item" role="menuitem">
+        <li class="nav-dropdown-item"><a href="#" class="nav-dropdown-item-link">Link #3</a></li>
+        <li class="nav-dropdown-item">
             <a href="#" class="nav-dropdown-item-link">Link #4</a>
         </li>
-        <li class="nav-dropdown-item" role="menuitem"><a href="#" class="nav-dropdown-item-link">Link #5</a></li>
-        <li class="nav-dropdown-item" role="menuitem">
+        <li class="nav-dropdown-item"><a href="#" class="nav-dropdown-item-link">Link #5</a></li>
+        <li class="nav-dropdown-item">
             <a href="#" class="nav-dropdown-item-link">Link #6</a>
             <div class="nav-dropdown-sub">
                 <div class="nav-dropdown-sub-mega-row">
